# solo12_quadruped_ros2

./: CMakeLists.txt  README.md  package.xml
solo12_controller/: CMakeLists.txt  package.xml  solo12_controller.xml
solo12_controller/include/solo12_controller/: solo12_controller.hpp
solo12_controller/src/: solo12_controller.cpp
solo12_description/: CMakeLists.txt  package.xml
solo12_description/urdf/: common.gazebo.xacro  solo12.gazebo.xacro  solo12.ros2_control.xacro  solo12.ros2control.xacro  solo12.transmission.xacro  solo12.urdf.xacro  solo12_robot.urdf.xacro
solo12_gazebo/: CMakeLists.txt  package.xml
solo12_gazebo/config/: controllers.yaml  solo12_controllers.yaml  solo12_forward_position_publisher.yaml
solo12_gazebo/launch/: bringup_gazebo.launch.py  view_solo12.launch.py
solo12_gazebo/rviz/: solo12.rviz
solo12_gazebo/test/: test_forward_position_controller.launch.py
solo12_hardware/: CMakeLists.txt  package.xml  solo12_hardware.xml
solo12_hardware/include/solo12_hardware/: solo12_hardware.hpp
solo12_hardware/src/: solo12_hardware.cpp
