<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solo12_gazebo</name>
  <version>0.0.0</version>
  <description>Solo12 quadruped description ros2 pkg</description>
  <maintainer email="ros20.doc@gmail.com">Anubhav Singh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>solo12_description</exec_depend>
  <exec_depend>solo12_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
